@@ -2104,6 +2104,17 @@ command to generate the output files.
     </magic>
     <glob pattern="*.srt"/>
   </mime-type>
+  <mime-type type="application/x-sami">
+    <sub-class-of type="text/plain"/>
+    <_comment>SAMI subtitles</_comment>
+    <acronym>SAMI</acronym>
+    <expanded-acronym>Synchronized Accessible Media Interchange</expanded-acronym>
+    <magic priority="50">
+      <match type="string" value="&lt;SAMI&gt;" offset="0:256"/>
+    </magic>
+    <glob pattern="*.smi"/>
+    <glob pattern="*.sami"/>
+  </mime-type>
   <mime-type type="application/x-sv4cpio">
     <_comment>SV4 CPIO archive</_comment>
     <glob pattern="*.sv4cpio"/>
