@@ -48,6 +48,7 @@ feed2 application/rss+xml x
 feed.atom application/atom+xml
 feeds.opml text/x-opml+xml
 subtitle.srt application/x-subrip
+subtitle.smi application/x-sami x
 
 # text
 text-iso8859-15.txt text/plain ox
