@@ -1,3 +1,9 @@
+2007-11-29  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: Add SAMI subtitle files, as per:
+	http://msdn2.microsoft.com/en-us/library/ms971327.aspx
+	* tests/: add test copied from the Microsoft website
+
 2007-11-21  Bastien Nocera  <hadess@hadess.net>
 
 	* README: Update bug reporting instructions
